2012-12-12 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: Tcl_PkgRequire for packages Rivet and rivetlib
    are exchanged so that commands in librivet.so can be imported when 
    they are on the export list and a programmer issues a 'package require ::rivet'
    * rivet/init.tcl: this script is now providing package 'Rivet' instead of
    'RivetTcl'. init.tcl initializes the Tcl core of Rivet and a package rivet
    has to exists for compatibility with version 2.0 where it was provided 
    rather pointelessly by librivet.so.

2012-12-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/Makefile.am: Manual pages output encoding set to UTF-8

2012-11-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/form.xml: subcommand 'checkboxes' documented

2012-11-09 Harald Oehlmann <oehhar@apache.org>
    * rivet/packages/form/form2.tcl: Checkboxes with no value and an arbitrary
    default value are initialy checked.
    *** POTENTIAL INCOMPATIBILITY ***
    The default value is not taken as checkbox value any more.
    This was IMHO a security hole.
    (reported on rivet-dev by Jeff Lawson)

2012-11-05 Harald Oehlmann <oehhar@apache.org>
    * rivet/packages/form/form2.tcl: Bug fixed: method textarea did not honor default values.
    (reported on rivet-dev by Jeff Lawson)

2012-10-29 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/[session-create-mysql.sql|session-create-sqlite.sql]: index
    riv_sess_cache_ix had a incomplete unique key definition that missed the 'package_' column (fixes bug #54063)

2012-10-28 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Manual entry for makeurl extented to clarify how the
    protocol is determined.
    
2012-10-16 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml,doc/xml/commands.xml,doc/xml/install.xml,doc/xml/examples.xml,
    doc/xml/request.xml,doc/convert_examples.tcl.in,doc/examples-sgml/hello1.rvt: Trying to